--- a/cookies_with_consent.html
+++ b/cookies_with_consent.html
@@ -8,54 +8,54 @@
       <th>domain</th>
       <th>secure</th>
       <th>httpOnly</th>
-      <th>expiry</th>
       <th>sameSite</th>
+      <th>expiry</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>0</th>
-      <td>_ga</td>
-      <td>GA1.2.1349364112.1631628940</td>
+      <td>e1a8753487db0271a36995342d9b8b32</td>
+      <td>lecgrjco9kb0m0av5bdkg9ucb4</td>
       <td>/</td>
-      <td>.toolsqa.com</td>
+      <td>www.gze-ni.de</td>
+      <td>True</td>
       <td>False</td>
-      <td>False</td>
-      <td>1694700939</td>
       <td>None</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>_gid</td>
-      <td>GA1.2.187198048.1631628940</td>
+      <td>trcusr</td>
+      <td>%24%24</td>
       <td>/</td>
-      <td>.toolsqa.com</td>
+      <td>www.gze-ni.de</td>
       <td>False</td>
       <td>False</td>
-      <td>1631715339</td>
       <td>None</td>
+      <td>2.147484e+09</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>_gat_gtag_UA_48910704_1</td>
-      <td>1</td>
+      <td>cltid</td>
+      <td>634684</td>
       <td>/</td>
-      <td>.toolsqa.com</td>
+      <td>www.gze-ni.de</td>
       <td>False</td>
       <td>False</td>
-      <td>1631628999</td>
       <td>None</td>
+      <td>2.147484e+09</td>
     </tr>
     <tr>
       <th>3</th>
-      <td>ToolsQA_ID</td>
-      <td>s%3A9d2bb3a3-65b1-4673-a68d-18b3940df8b7.BhXV4EwDV9uXZT7uxl0yGHPwTgQrAQPGMbHSQbW1Rgc</td>
+      <td>js_vsid</td>
+      <td>2177281</td>
       <td>/</td>
-      <td>www.toolsqa.com</td>
+      <td>www.gze-ni.de</td>
       <td>False</td>
-      <td>True</td>
-      <td>1631715343</td>
+      <td>False</td>
       <td>None</td>
+      <td>1.631719e+09</td>
     </tr>
   </tbody>
 </table>
