--- a/cookies_without_consent.html
+++ b/cookies_without_consent.html
@@ -2,8 +2,60 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
+      <th>name</th>
+      <th>value</th>
+      <th>path</th>
+      <th>domain</th>
+      <th>secure</th>
+      <th>httpOnly</th>
+      <th>sameSite</th>
+      <th>expiry</th>
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>0</th>
+      <td>e1a8753487db0271a36995342d9b8b32</td>
+      <td>lecgrjco9kb0m0av5bdkg9ucb4</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>True</td>
+      <td>False</td>
+      <td>None</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>trcusr</td>
+      <td>%24%24</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>False</td>
+      <td>False</td>
+      <td>None</td>
+      <td>2.147484e+09</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>cltid</td>
+      <td>634684</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>False</td>
+      <td>False</td>
+      <td>None</td>
+      <td>2.147484e+09</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>js_vsid</td>
+      <td>2177281</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>False</td>
+      <td>False</td>
+      <td>None</td>
+      <td>1.631719e+09</td>
+    </tr>
   </tbody>
 </table>
