adjust cookie script

--- a/cookies_with_consent.html
+++ b/cookies_with_consent.html
@@ -16,7 +16,7 @@
     <tr>
       <th>0</th>
       <td>e1a8753487db0271a36995342d9b8b32</td>
-      <td>lecgrjco9kb0m0av5bdkg9ucb4</td>
+      <td>3mgq4g33i4c5ita0f2cfe5bol7</td>
       <td>/</td>
       <td>www.gze-ni.de</td>
       <td>True</td>
@@ -26,17 +26,6 @@
     </tr>
     <tr>
       <th>1</th>
-      <td>trcusr</td>
-      <td>%24%24</td>
-      <td>/</td>
-      <td>www.gze-ni.de</td>
-      <td>False</td>
-      <td>False</td>
-      <td>None</td>
-      <td>2.147484e+09</td>
-    </tr>
-    <tr>
-      <th>2</th>
       <td>cltid</td>
       <td>634684</td>
       <td>/</td>
@@ -47,7 +36,29 @@
       <td>2.147484e+09</td>
     </tr>
     <tr>
+      <th>2</th>
+      <td>trcusr</td>
+      <td>192076</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>False</td>
+      <td>False</td>
+      <td>None</td>
+      <td>2.147484e+09</td>
+    </tr>
+    <tr>
       <th>3</th>
+      <td>fontSize</td>
+      <td>75</td>
+      <td>/</td>
+      <td>www.gze-ni.de</td>
+      <td>False</td>
+      <td>False</td>
+      <td>None</td>
+      <td>1.663241e+09</td>
+    </tr>
+    <tr>
+      <th>4</th>
       <td>js_vsid</td>
       <td>2177281</td>
       <td>/</td>
@@ -55,7 +66,7 @@
       <td>False</td>
       <td>False</td>
       <td>None</td>
-      <td>1.631719e+09</td>
+      <td>1.631720e+09</td>
     </tr>
   </tbody>
 </table>
